# ql_console

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  main.py  pyproject.toml
src/ql_console/: __init__.py  _generated.py  app.py  build_info.py  colors.py  commands.py  config.py  connection.py  i18n.py  rcon_client.py  roster.py  stats_client.py
src/ql_console/ui/: __init__.py  about_dialog.py  appicon.py  autocomplete.py  console_view.py  main_frame.py  server_dialog.py  settings_dialog.py
tools/: build_exe.py  import_cvarlist.py  make_icon.py
