[project]
name = "ql-console"
version = "0.1.0"
description = "Quake Live RCON admin console (wxPython + ZeroMQ)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wxpython>=4.2.5",
    "pyzmq>=26",
]

[project.scripts]
ql-console = "ql_console.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ql_console"]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
